package com.shneddy.dietdiary.adapters;

public class FoodAndEntryJoinAdapter {
}
