@startuml

title __ADAPTERS's Package Diagram__\n

  package com.shneddy.dietdiary {
    package com.shneddy.dietdiary.adapters {
      class ConsumptionAdapter {
          - officialList : List<EntryAndFoodData>
          + onCreateViewHolder()
          + onBindViewHolder()
          + getItemCount()
          + getEntryAndFoodAt()
          + setEntryAndFoodsList()
          + getDailyTotal()
      }
    }
  }
  

  package com.shneddy.dietdiary {
    package com.shneddy.dietdiary.adapters {
      class ConsumptionHolder {
          - name : TextView
          - sugarsCalc : TextView
          - portionSize : TextView
          + viewBackground : RelativeLayout
          + viewForeground : RelativeLayout
          + ConsumptionHolder()
      }
    }
  }
  

  package com.shneddy.dietdiary {
    package com.shneddy.dietdiary.adapters {
      class DiemAdapter {
          - list : List<Diem>
          + onCreateViewHolder()
          + onBindViewHolder()
          + getItemCount()
          + getDiemAt()
          + setDiemList()
      }
    }
  }
  

  package com.shneddy.dietdiary {
    package com.shneddy.dietdiary.adapters {
      class DiemHolder {
          - date : TextView
          + viewBackground : RelativeLayout
          + viewForeground : RelativeLayout
          + DiemHolder()
      }
    }
  }
  

  package com.shneddy.dietdiary {
    package com.shneddy.dietdiary.adapters {
      class FoodAdapter {
          - foodList : List<Food>
          - clickListener : OnItemClickListener
          + onCreateViewHolder()
          + onBindViewHolder()
          + getItemCount()
          + setFoods()
          + getFoodAt()
      }
    }
  }
  

  package com.shneddy.dietdiary {
    package com.shneddy.dietdiary.adapters {
      class FoodHolder {
          - name : TextView
          - sugars : TextView
          - foodType : TextView
          + viewBackground : RelativeLayout
          + viewForeground : RelativeLayout
          + FoodHolder()
      }
    }
  }
  

  package com.shneddy.dietdiary {
    package com.shneddy.dietdiary.adapters {
      class FoodAndEntryJoinAdapter {
      }
    }
  }
  

  package com.shneddy.dietdiary {
    package com.shneddy.dietdiary.adapters {
      class FoodTypeAdapter {
          - foodTypes : List<FoodType>
          + onCreateViewHolder()
          + onBindViewHolder()
          + getItemCount()
          + getFoodTypeAt()
          + setFoodTypes()
      }
    }
  }
  

  package com.shneddy.dietdiary {
    package com.shneddy.dietdiary.adapters {
      class FoodTypeHolder {
          - name : TextView
          - description : TextView
          + viewBackground : RelativeLayout
          + viewForeground : RelativeLayout
          + FoodTypeHolder()
      }
    }
  }
  

  package com.shneddy.dietdiary {
    package com.shneddy.dietdiary.adapters {
      class TypeAndFoodJoinAdapter {
          - flatList : List<FoodAndTypeData>
          + onCreateViewHolder()
          + onBindViewHolder()
          + getItemCount()
          + getItemId()
          + getFoodAndType()
          + setList()
      }
    }
  }
  

  package com.shneddy.dietdiary {
    package com.shneddy.dietdiary.adapters {
      class TypeFoodHolder {
          - name : TextView
          - sugars : TextView
          - foodType : TextView
          + viewBackground : RelativeLayout
          + viewForeground : RelativeLayout
          + TypeFoodHolder()
      }
    }
  }
  

  ConsumptionAdapter -up-|> Adapter
  ConsumptionAdapter +-down- ConsumptionHolder
  ConsumptionHolder -up-|> ViewHolder
  DiemAdapter -up-|> Adapter
  DiemAdapter +-down- DiemHolder
  DiemHolder -up-|> ViewHolder
  FoodAdapter -up-|> Adapter
  FoodAdapter +-down- FoodHolder
  FoodHolder -up-|> ViewHolder
  FoodTypeAdapter -up-|> Adapter
  FoodTypeAdapter +-down- FoodTypeHolder
  FoodTypeHolder -up-|> ViewHolder
  TypeAndFoodJoinAdapter -up-|> Adapter
  TypeAndFoodJoinAdapter +-down- TypeFoodHolder
  TypeFoodHolder -up-|> ViewHolder

@enduml
